--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 html, body {
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', Arial, sans-serif;
   background: #0d0d0d;
   color: #f0f0f0;
+  justify-content: center;
+  align-items: center;
+  background: #0d0d0d;
 }
 html{
   scroll-behavior: smooth;
-  scroll-snap-type: both mandatory;
+  scroll-snap-type: y mandatory;
 }
 section {
   scroll-snap-align: start;
@@ -16,24 +20,114 @@ section {
   justify-content: center;
   align-items: center;
 }
-/* Ortalamayı sağlayan ana düzen */
 body {
-  display: block; /* Flex'i kaldırıyoruz */
+  display: block; 
 }
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #0d0d0d;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 40px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.nav-left,
+.nav-center,
+.nav-right {
+  gap: 5px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+.nav-right {
+  justify-content: flex-end;
+}
+
+.nav-center{
+  justify-content: center;
+}
+
+.logo{
+  font-size: 1.6rem;
+  font-weight: bold;
+  color: #2f8fed;
+  user-select: none;
+}
+.logo img {
+  width: 175px;
+  height: 35px;
+}
+.nav-btn {
+  position: relative;
+  overflow: hidden;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  border-radius: 8px;
+  padding: 8px 18px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: 1.2rem;
+  color: #f0f0f0;
+  border: none;
+}
+
+.nav-btn.github {
+  background-color: #000;
+}
+
+.nav-btn::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -75%;
+  width: 50%;
+  height: 100%;
+   background: linear-gradient(
+    120deg,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.6) 50%,
+    rgba(255,255,255,0) 100%
+  );
+  transform: rotate(-20deg);
+  transition: left 0.6s ease;
+  pointer-events: none;
+}
+.nav-btn:hover::after {
+  left: 130%; 
+}
+.nav-btn:hover {
+  transform: translateY(-2px);
+}
+
+.nav-btn img {
+  width: 1.7rem;
+  height: 1.7rem;
+  margin-right: 8px;
+  filter: brightness(0) invert(1);
+}
+
 .hero-section {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh; /* tam ekran */
+  min-height: 100vh; 
 }
 .page-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-  height: 100vh;
+  overflow: visible;
+  min-height: 100vh;
 
 }
 .card-section {
@@ -95,31 +189,32 @@ body {
   background: #111a;
 }
 .info-section {
-    margin-top: 80px; /* üst kısımla arayı açar */
+    margin-top: 80px; 
     min-height: 100vh;
     border-top: 1px solid #222;
     display: flex;
     justify-content: center;
-    
+    scroll-snap-align: end;
     gap: 20px;
 }
 .info-box {
-  flex: 1; /* 350px minimum genişlik, gerektiğinde küçülüp büyüsün */
+  flex: 1; 
   display: flex;
   flex-direction: column;
   justify-content: initial;
   background: #1a1a1a;
-  border: 1px solid #2a2a2a;
+  border: 4px solid #2a2a2a;
   border-radius: 12px;
   padding: 20px 22px;
   color: #ccc;
   box-shadow: 0 4px 12px rgba(0,0,0,0.3);
   font-size: 0.9rem;
   line-height: 1.7;
-  min-height: 400px; /* 🔥 hepsi aynı yükseklikte */
-  max-height: 420px; /* fazla içeriği de taşırmaz */
+  min-height: 400px; 
+  max-height: 420px; 
   width: 400px;
   position: relative;
+  transition: border 1.5s ease;
 }
 
 .info-box .title {
@@ -127,18 +222,23 @@ body {
   top: -22px;
   left: 20px;
   background-color: #2f8fed;
+  border: 1.5px solid rgb(19, 18, 18);
   color: white;
   font-weight: bold;
   font-size: 1.4rem;
   border-radius: 8px;
   padding: 6px 14px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  transition: background 1.5s ease;
 }
-.info-box .title:hover {
-  color: #2f6b7a; 
-  box-shadow: #2f6b7a 0px 54px 55px, #2f6b7a 0px -12px 30px, #2f6b7a 0px 4px 6px, #2f6b7a 0px 12px 13px, #2f6b7a 0px -3px 5px;
+.info-box:hover {
+  border: 4px solid #2f8fed;
+}
 
+.info-box:hover .title {
+  background-color: #2a2a2a;
 }
+
 .info-box a {
   color: #5ebad4;
   text-decoration: none;
@@ -226,11 +326,116 @@ canvas {
 }
 
 button.error {
-  background-color: #d9534f !important; /* kırmızı */
+  background-color: #d9534f !important; 
   color: white !important;
   animation: shake 0.4s ease;
 }
 .error {
   animation: shake 0.3s ease;
   border-color: #d9534f !important;
+}
+#toast-box {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+  z-index: 1000;
+}
+
+.toast {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 0.6rem;
+  background: rgba(25, 25, 25, 0.9);
+  border-left: 4px solid #2f8fed;
+  color: #dce8ff;
+  font-size: 0.95rem;
+  padding: 0.9rem 1.3rem;
+  border-radius: 12px;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.4);
+  backdrop-filter: blur(8px);
+  opacity: 0;
+  transform: translateY(20px);
+  animation: toastIn 0.4s forwards;
+}
+
+.toast i {
+  font-size: 1rem;
+  color: #2f8fed;
+}
+
+@keyframes toastIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes toastOut {
+  to {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+}
+.link-panel {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -45%);
+  background-color: black;
+  color: #ccc;
+  width: 400px;
+  height: 70px;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  padding-top: 70px;
+  z-index: 2000;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 1.5s ease, transform 1.5s ease;
+}
+
+.link-panel.show {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+  pointer-events: auto;
+}
+
+.link-panel img {
+  position: absolute;
+  top: -60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.link-panel h2 {
+  margin: 0;
+  font-size: 1.3rem;
+  color: #2f8fed;
+  font-weight: 600;
+}
+
+.link-panel span{
+  font-size: 0.9rem;
+  color: rgb(55, 55, 55);
+  font-weight: 600;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -45%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
 }
